force-app/main/default/objects/kt_checklist__Checklist_Genius_Settings__c/kt_checklist__Checklist_Genius_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>Checklist Genius Settings</label>
</CustomObject>