force-app/main/default/objects/kt_checklist__Checklist_Genius_Settings__c/fields/kt_checklist__Enable_Checklist_Edit__c.field-meta.xml
<CustomField>
    <fullName>kt_checklist__Enable_Checklist_Edit__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Edit Checklist Title, Description and Due Date.</description>
    <inlineHelpText>Edit Checklist Title, Description and Due Date.</inlineHelpText>
    <label>Enable Checklist Edit</label>
    <type>Checkbox</type>
</CustomField>