force-app/main/default/objects/kt_checklist__Checklist_Genius_Settings__c/fields/kt_checklist__Enable_Checklist_Reminders__c.field-meta.xml
<CustomField>
    <fullName>kt_checklist__Enable_Checklist_Reminders__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enable Checklist Reminders</label>
    <type>Checkbox</type>
</CustomField>