force-app/main/default/objects/kt_checklist__Checklist_Genius_Settings__c/fields/kt_checklist__Reminder_At__c.field-meta.xml
<CustomField>
    <fullName>kt_checklist__Reminder_At__c</fullName>
    <label>Reminder At</label>
    <length>80</length>
    <type>Text</type>
</CustomField>