force-app/main/default/objects/kt_checklist__Checklist_Genius_Settings__c/fields/kt_checklist__Reminder_Email_Template__c.field-meta.xml
<CustomField>
    <fullName>kt_checklist__Reminder_Email_Template__c</fullName>
    <label>Reminder Email Template</label>
    <length>18</length>
    <type>Text</type>
</CustomField>